--- a/app/views/home/delete.html.erb
+++ b/app/views/home/delete.html.erb
@@ -1,2 +1,3 @@
-<h1>Home#delete</h1>
-<p>Find me in app/views/home/delete.html.erb</p>
+<h4>You've checked off <%= @product.name %> from your list!</h4>
+
+<li><a href="/home">Back to list</a></li>
