--- a/app/views/home/create.html.erb
+++ b/app/views/home/create.html.erb
@@ -1,2 +1,3 @@
-<h1>Home#create</h1>
-<p>Find me in app/views/home/create.html.erb</p>
+<h3>You've added <%= @product.name %> to your list!</h3>
+
+<li><a href="/home">Back to list</a></li>
