--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,43 @@
-<h1>Home#index</h1>
+<h1>Shoppy List</h1>
 
-<p>
-  yolo sup
-</p>
+<li><a href="/home/new">Add Item to list</a></li>
+
+<h4>List of products to purchase</h4>
+
+<table class='table'>
+
+  <thead>
+    <tr>
+      <td>
+        Product Name
+      </td>
+      <td>
+        Quantity
+      </td>
+      <td>
+        Check It Off
+      </td>
+    </tr>
+  </thead>
+  <tbody>
+
+<% @products.each do |item| %>
+
+  <tr>
+    <td>
+      <%= item.name %>
+    </td>
+    <td>
+      <%= item.quantity %>
+    </td>
+    <td>
+      <%= form_for item, url: {action: 'delete'} do |f| %>
+        <%= f.hidden_field :id %>
+        <%= f.submit 'Check off item from list' %>
+      <% end %>
+    </td>
+  </tr>
+
+<% end %>
+</tbody>
+</table>
