--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,24 @@
 </head>
 <body>
 
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">
+        Shoppy List
+      </a>
+    </div>
+  </div>
+</nav>
+
+<li><a href="/home">Home</a></li>
+<li><a href="/users/signup">Register</a></li>
+
 <%= yield %>
+
+<footer>
+ &copy; 2015 James
+</footer>
 
 </body>
 </html>
